# advent-of-code

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  answers.txt  check.sh  input.sh  run.sh
2015/: Cargo.toml  answers.txt
2015/puzzle04/: Cargo.toml
2015/puzzle07/: Cargo.toml
2015/puzzle08/: Cargo.toml
2015/puzzle09/: Cargo.toml
2015/puzzle10/: Cargo.toml
2015/puzzle11/: Cargo.toml
2015/puzzle12/: Cargo.toml
2015/puzzle13/: Cargo.toml
2015/puzzle14/: Cargo.toml
2015/puzzle17/: Cargo.toml
2015/puzzle19/: Cargo.toml
2015/puzzle20/: Cargo.toml
2015/puzzle23/: Cargo.toml
2015/puzzle24/: Cargo.toml
2015/puzzle25/: Cargo.toml
2016/: answers.txt
2016/assembunny/: Cargo.toml
2016/puzzle01/: Cargo.toml
2016/puzzle02/: Cargo.toml
2016/puzzle03/: Cargo.toml
2016/puzzle05/: Cargo.toml
2017/: Cargo.toml  answers.txt
2017/tablet/: Cargo.toml
2018/: Cargo.toml  answers.txt  run.sh
2019/: Cargo.toml  answers.txt
2020/: Cargo.toml  answers.txt
2021/: Cargo.toml  answers.txt
2022/: answers.txt
2023/: answers.txt
2024/: Cargo.toml  answers.txt
2025/: Cargo.toml  answers.txt
aoc/: Cargo.toml
aoc/src/: direction.rs  lib.rs  linear.rs  pathfinding.rs  permutations.rs  search.rs  transpose.rs
parsing/: Cargo.toml
puzzle01/: Cargo.toml
puzzle02/: Cargo.toml
puzzle10/: Cargo.toml
puzzle12/: Cargo.toml
puzzle13/: Cargo.toml
puzzle14/: Cargo.toml
puzzle15/: Cargo.toml
puzzle17/: camera.txt
puzzle18/: distances.txt
puzzle21/: Cargo.toml
puzzle22/: Cargo.toml
puzzle23/: Cargo.toml
puzzle24/: Cargo.toml
(+441 files in other folders)
