[package]
name    = "aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.19", optional = true }

[features]
default      = []
bounds       = []
direction    = ["num-traits"]
pathfinding  = ["num-traits"]
permutations = []
transpose    = []
